// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill/> renders Pill component with variant:alert correctly 1`] = `
<div>
  <span
    class="sc-bdfBwQ fFEcdn"
  >
    Pill Label
  </span>
</div>
`;

exports[`<Pill/> renders Pill component with variant:success correctly 1`] = `
<div>
  <span
    class="sc-bdfBwQ hjkiSL"
  >
    Pill Label
  </span>
</div>
`;

exports[`<Pill/> renders Pill component with variant:warning correctly 1`] = `
<div>
  <span
    class="sc-bdfBwQ emjRfH"
  >
    Pill Label
  </span>
</div>
`;
